<resources>
    <string name="app_name">ShoppingList</string>
    <string name="send">Add</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="cheese">Cheese</string>
    <string name="rice">Rice</string>
    <string name="bread">bread</string>
    <string name="apples">apples</string>
    <string name="bananas">bananas</string>
    <string name="other_form_of_bread">Other form of bread</string>
    <string name="poptarts">poptarts</string>
    <string name="ice_cream">ice cream</string>
    <string name="pizza">pizza</string>
    <string name="pineapple">pineapple</string>
</resources>